프로젝트 생성 시 name 및 기존 resource(harbor,kubernetes) 확인
